Final version of the site

--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
 <!--
     Author: Chris Chase
-    Date: 08-02-2019
+    Date: 08-17-2019
     Class: CIS 155
-    Assignment: Project V2
+    Assignment: Project V3 Final
     Document Propose: This is the About page of my site where i explain a little about the project.
 -->
 
@@ -22,10 +22,10 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services &#9662;</a>
         <ul>
-          <li><a href="#">Preventative Care</a></li>
-          <li><a href="#">Teeth Whitening</a></li>
-          <li><a href="#">Pediatric Dentistry</a></li>
-          <li><a href="#">Cosmetic Dentistry</a></li>
+          <li><a href="preventative_care.html">Preventative Care</a></li>
+          <li><a href="teeth_whitening.html">Teeth Whitening</a></li>
+          <li><a href="pediatric_dentistry.html">Pediatric Dentistry</a></li>
+          <li><a href="cosmetic_dentistry.html">Cosmetic Dentistry</a></li>
         </ul>
       </li>
       <li><a href="contact.html">Contact</a></li>
@@ -64,16 +64,14 @@
         </tr>
         <tr>
           <th>#3</th>
-            <td><p>Placeholder Text for Version 3 changes</p>
+            <td><p>The final version of my project i tried to clean up and fix issues from the previos versions
+                   such as some text and images not showing on screen. I added an imbedded map from google instead of an image
+                   and also a form on the contacts page. Then I finally added the sub-menu pages for the services tab.
+                   In the end I think the website could definately use improvment but overall I am pretty pleased with it.</p>
             </td>
             <td>08-22-2019</td>
         </tr>
     </tbody>
-    <tfoot>
-      <tr>
-        <td colspan="3">*Last modified Aug 10, 2109</td>
-      </tr>
-    </tfoot>
   </table>
 
     <!-- <h1>About The Project</h1>
@@ -84,7 +82,7 @@
       After the nav bar I was able to focus a little bit on the content of the site.</p> -->
   </div>
   <div class="source">
-    <h2>Sources</h2>
+    <h2>Sources (All items protected under academic fair use )</h2>
     <ul>
       <li>Banner Tooth Image - https://pixabay.com/illustrations/teeth-cartoon-hygiene-cleaning-1670434/</li>
       <li>Map - Google Maps</li>
