--- a/cosmetic_dentistry.html
+++ b/cosmetic_dentistry.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 <!--
     Author: Chris Chase
-    Date: 08-17-2019
+    Date: 08-20-2019
     Class: CIS 155
     Assignment: Project V3 Final
-    Document Propose: This is the Index page of my site where you are first directed.
+    Document Propose: This is one of the service pages
 -->
 
-  <title>ACME &#8210; Family Dentistry</title>
+  <title>Cosmetic Dentistry</title>
   <link href="styles.css" rel="stylesheet" />
 
 </head>
@@ -36,29 +36,29 @@
       </ul>
     </nav>
   </header>
-  <div class="container-1">
-    <div class="indexWelcome">
-        <h1>Welcome</h1>
-        <p>For more than 50 years <strong>ACME Family Dentistry</strong> has been the preferred dentist on the Olympic peninsula.
-          We strive for excellence and always place the patients’ needs first.
-          You will always feel at home when you visit ACME Family Dentistry so please come and check us out. </p>
-    </div>
-    <div class="indexImg">
+  <div class="cosDent">
+
+    <div class="cosImage">
       <figure>
-        <img src="img/patient1.jpg" alt="dentistry" usemap="#indeximg_map" />
-        <figcaption>Photo by Geo Days on Unsplash</figcaption>
-      </figure>
-      <map name="indeximg_map">
-        <area shape="rect" coords="100,336,329,458" href="services.html" alt="Services" />
-      </map>
+        <img src="img/cosmetic_dentistry.jpg" alt="Cosmetic Dentistry" />
+        <figcaption>Photo by KAL VISUALS on Unsplash</figcaption>
+      </figure>      
+    </div>
+
+    <div class="cosInfo">
+      <h1>Cosmetic Dentistry</h1>
+      <p>We believe having a great smile and beautiful teeth is something every person should have.
+         With state-of-the-art materials, and tested, trusted dental techniques, cosmetic dentistry improves your
+         appearance and enhances self-esteem.
+         If you are not currently happy or satisfied with how your smile looks, consider our cosmetic solutions.
+         We offer veneers, dentures, ceramic inlays and composite tooth colored fillings.</p>
+
     </div>
   </div>
-
   <footer>
     <div>
       &copy; 2019 ACME Family Dentistry &ndash; Site Design by Chris Chase
     </div>
   </footer>
-</body>
 
-</html>
+</body>
