--- a/preventative_care.html
+++ b/preventative_care.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 <!--
     Author: Chris Chase
-    Date: 08-17-2019
+    Date: 08-20-2019
     Class: CIS 155
     Assignment: Project V3 Final
-    Document Propose: This is the Index page of my site where you are first directed.
+    Document Propose: This is one of the service pages
 -->
 
-  <title>ACME &#8210; Family Dentistry</title>
+  <title>Preventative Care</title>
   <link href="styles.css" rel="stylesheet" />
 
 </head>
@@ -36,29 +36,35 @@
       </ul>
     </nav>
   </header>
-  <div class="container-1">
-    <div class="indexWelcome">
-        <h1>Welcome</h1>
-        <p>For more than 50 years <strong>ACME Family Dentistry</strong> has been the preferred dentist on the Olympic peninsula.
-          We strive for excellence and always place the patients’ needs first.
-          You will always feel at home when you visit ACME Family Dentistry so please come and check us out. </p>
-    </div>
-    <div class="indexImg">
+  <div class="preCare">
+
+    <div class="preImage">
       <figure>
-        <img src="img/patient1.jpg" alt="dentistry" usemap="#indeximg_map" />
-        <figcaption>Photo by Geo Days on Unsplash</figcaption>
+        <img src="img/preventative_care.jpg" alt="Preventative Care" />
+        <figcaption>Photo by Autumn Goodman on Unsplash</figcaption>
       </figure>
-      <map name="indeximg_map">
-        <area shape="rect" coords="100,336,329,458" href="services.html" alt="Services" />
-      </map>
+    </div>
+
+    <div class="preInfo">
+      <h1>Preventative Care</h1>
+      <p>Currently at ACME family dentistry we have four registered dental hygienists
+        who are dedicated to make your visit to our clinic an excellent and comfortable one.
+        Here are some of the general preventative dental services we offer to help you keep
+        your teeth healthy.</p>
+      <h2>Teeth Cleaning</h2>
+      <p>We recommend scheduling cleanings at least every sixth months where we’ll remove plaque
+        build-up from the surfaces of teeth and then polish to remove stubborn stains</p>
+      <h2>Dental X-rays</h2>
+      <p>X-rays are a primary tool for early identification of dental problems.
+        Detecting issues with X-rays before they become problems can save you money in the long run
+        by preventing the need for more extensive, expensive procedures or surgeries.</p>
+
     </div>
   </div>
-
   <footer>
     <div>
       &copy; 2019 ACME Family Dentistry &ndash; Site Design by Chris Chase
     </div>
   </footer>
-</body>
 
-</html>
+</body>
