--- a/services.html
+++ b/services.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
 <!--
     Author: Chris Chase
-    Date: 08-02-2019
+    Date: 08-17-2019
     Class: CIS 155
-    Assignment: Project V2
+    Assignment: Project V3 Final
     Document Propose: This is the Services page of my site where the services that are available are shown.
 -->
 
@@ -22,10 +22,10 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services &#9662;</a>
         <ul>
-          <li><a href="#">Preventative Care</a></li>
-          <li><a href="#">Teeth Whitening</a></li>
-          <li><a href="#">Pediatric Dentistry</a></li>
-          <li><a href="#">Cosmetic Dentistry</a></li>
+          <li><a href="preventative_care.html">Preventative Care</a></li>
+          <li><a href="teeth_whitening.html">Teeth Whitening</a></li>
+          <li><a href="pediatric_dentistry.html">Pediatric Dentistry</a></li>
+          <li><a href="cosmetic_dentistry.html">Cosmetic Dentistry</a></li>
         </ul>
       </li>
       <li><a href="contact.html">Contact</a></li>
@@ -39,10 +39,10 @@
       <img src="img/services.png" alt="Dentistry Services" usemap="#services_map">
       <map name="services_map">
         <!-- M4LO7 Demonstrate the use of image maps, including determining x and y values - The image map redirects to the services page.-->
-        <area shape="rect" coords="40,47,349,252" href="#" alt="Preventative Care" />
-        <area shape="rect" coords="461,52,739,252" href="#" alt="Teeth Whitening" />
-        <area shape="rect" coords="38,285,350,485" href="#" alt="Pediatric Dentistry" />
-        <area shape="rect" coords="433,285,760,494" href="#" alt="Comsmetic Dentistry" />
+        <area shape="rect" coords="40,47,349,252" href="preventative_care.html" alt="Preventative Care" />
+        <area shape="rect" coords="461,52,739,252" href="teeth_whitening.html" alt="Teeth Whitening" />
+        <area shape="rect" coords="38,285,350,485" href="pediatric_dentistry.html" alt="Pediatric Dentistry" />
+        <area shape="rect" coords="433,285,760,494" href="cosmetic_dentistry.html" alt="Cosmetic Dentistry" />
       </map>
 
     </div>
