--- a/teeth_whitening.html
+++ b/teeth_whitening.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 <!--
     Author: Chris Chase
-    Date: 08-17-2019
+    Date: 08-20-2019
     Class: CIS 155
     Assignment: Project V3 Final
-    Document Propose: This is the Index page of my site where you are first directed.
+    Document Propose: This is one of the service pages
 -->
 
-  <title>ACME &#8210; Family Dentistry</title>
+  <title>Teeth Whitening</title>
   <link href="styles.css" rel="stylesheet" />
 
 </head>
@@ -36,29 +36,29 @@
       </ul>
     </nav>
   </header>
-  <div class="container-1">
-    <div class="indexWelcome">
-        <h1>Welcome</h1>
-        <p>For more than 50 years <strong>ACME Family Dentistry</strong> has been the preferred dentist on the Olympic peninsula.
-          We strive for excellence and always place the patients’ needs first.
-          You will always feel at home when you visit ACME Family Dentistry so please come and check us out. </p>
-    </div>
-    <div class="indexImg">
+  <div class="teethWhite">
+
+    <div class="whiteImage">
       <figure>
-        <img src="img/patient1.jpg" alt="dentistry" usemap="#indeximg_map" />
-        <figcaption>Photo by Geo Days on Unsplash</figcaption>
+        <img src="img/teeth_whitening.jpg" alt="Teeth Whitening" />
+        <figcaption>Source: https://pixabay.com/photos/dentist-facet-uv-light-curing-1864921/</figcaption>
       </figure>
-      <map name="indeximg_map">
-        <area shape="rect" coords="100,336,329,458" href="services.html" alt="Services" />
-      </map>
+    </div>
+
+    <div class="whiteInfo">
+      <h1>Teeth Whitening</h1>
+      <p>Beverages like coffee, tea, red wine, and certain sodas can be a root cause, and some
+        foods can stain your teeth. Of course, gradual staining can reach an unacceptable point as
+        you start to enter the latter stages of your life.</p>
+      <p>We offer many types of whitening systems that can be performed in-office or taken home.
+        Having a beautiful smile is something everyone deserves to experience.</p>
+
     </div>
   </div>
-
   <footer>
     <div>
       &copy; 2019 ACME Family Dentistry &ndash; Site Design by Chris Chase
     </div>
   </footer>
-</body>
 
-</html>
+</body>
