--- a/pediatric_dentistry.html
+++ b/pediatric_dentistry.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 <!--
     Author: Chris Chase
-    Date: 08-17-2019
+    Date: 08-20-2019
     Class: CIS 155
     Assignment: Project V3 Final
-    Document Propose: This is the Index page of my site where you are first directed.
+    Document Propose: This is one of the service pages
 -->
 
-  <title>ACME &#8210; Family Dentistry</title>
+  <title>Pediatric Dentistry</title>
   <link href="styles.css" rel="stylesheet" />
 
 </head>
@@ -36,29 +36,30 @@
       </ul>
     </nav>
   </header>
-  <div class="container-1">
-    <div class="indexWelcome">
-        <h1>Welcome</h1>
-        <p>For more than 50 years <strong>ACME Family Dentistry</strong> has been the preferred dentist on the Olympic peninsula.
-          We strive for excellence and always place the patients’ needs first.
-          You will always feel at home when you visit ACME Family Dentistry so please come and check us out. </p>
-    </div>
-    <div class="indexImg">
+  <div class="pedDent">
+
+    <div class="pedImage">
       <figure>
-        <img src="img/patient1.jpg" alt="dentistry" usemap="#indeximg_map" />
-        <figcaption>Photo by Geo Days on Unsplash</figcaption>
+        <img src="img/pediatric_dentistry.jpg" alt="Pediatric Dentistry" />
+        <figcaption>Photo by kazuend on Unsplash</figcaption>
       </figure>
-      <map name="indeximg_map">
-        <area shape="rect" coords="100,336,329,458" href="services.html" alt="Services" />
-      </map>
+    </div>
+    
+    <div class="pedInfo">
+      <h1>Pediatric Dentistry</h1>
+      <p>We at ACME Dentistry try to make the dental experience comfortable
+         for everyone especially kids. Tooth decay is not a trivial thing,
+         but a condition that can create significant discomfort for your child and even
+         make it difficult for them to eat, speak clearly, and engage in normal daily activities.</p>
+      <p>Using the latest in digital X-rays means we can
+         quickly and easily take images to develop a complete treatment plan.</p>
+
     </div>
   </div>
-
   <footer>
     <div>
       &copy; 2019 ACME Family Dentistry &ndash; Site Design by Chris Chase
     </div>
   </footer>
-</body>
 
-</html>
+</body>
